fix: update styles.min.css to include bootstrap-grid import and adjust text alignment for paragraphs in general.scss for improved layout consistency

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -848,7 +848,7 @@ body.logged-in {
 }
 
 .entry-content {
-	p {
+	p:not(.has-text-align-center):not(.has-text-align-right):not(.has-text-align-left) {
 		text-align: justify;
 	}
 
